added new index sidebar

--- a/about/colophon/index.html
+++ b/about/colophon/index.html
@@ -11,6 +11,7 @@
 <li><a href="/blog/">Blog</a></li>   
 <li><a href="/about/">About</a></li>
 </ul></div></nav></div>
+
 <div class="main layout">
 
 <div class="title"><h1 id="top">Colophon</h1><hr></div>
@@ -32,10 +33,10 @@
 
 <h2 id="typography">Typography</h2><p>A duo of fonts are used across the site, <a href="https://tribby.com/fonts/barlow/" target="_blank" rel="noopener">Barlow</a> Extra Bold for all headers and <a href="https://www.theleagueofmoveabletype.com/league-spartan" target="_blank" rel="noopener">League Spartan</a> Regular for all text. Some items on the site use default system fonts, like the navigation menu, back button, footer and codeblocks.</p>
 <p>Fonts are subsetted and optimised automatically using <a href="https://github.com/zachleat/glyphhanger" target="_blank" rel="noopener">glyphhanger</a>, and are present in Woff2, Woff and TTF formats in the CSS file. In case of your browser not supporting custom fonts, the default sans-serif fault is used site-wide.</p>
-<div class="listbox box"><h2>Further Reading</h2><hr><ul>
-<li><a class="linklist" href="identity" >• Identity</a></li>
-<li><a class="linklist" href="testpage" >• d00k.net Test Page</a></li>
-<li><a class="linklist" href="site_stats" >• Performance and Compliance Stats</a></li>
+<div class="listbox box"><h2>Further Reading</h2><hr><ul class="linklist">
+<li><a href="identity" >• Identity</a></li>
+<li><a href="testpage" >• d00k.net Test Page</a></li>
+<li><a href="site_stats" >• Performance and Compliance Stats</a></li>
 </ul></div>
 
 <nav><a class="prev navbut" href="/about/">← Back to  About </a>
