--- a/design/index.html
+++ b/design/index.html
@@ -12,6 +12,7 @@
 <li><a href="/blog/">Blog</a></li>   
 <li><a href="/about/">About</a></li>
 </ul></div></nav></div>
+
 <div class="main layout">
 
 <div class="title"><h1 id="top">Design Portfolio</h1><hr></div>
@@ -19,10 +20,10 @@
 <div class="listbox box">
 <h2>Table of Contents</h2>
 <details><summary>Expand</summary>
-<ul>
-<li><a class="linklist" href="#2023" >• 2023</a></li>
-<li><a class="linklist" href="#2022" >• 2022</a></li>
-<li><a class="linklist" href="#pre---2022" >• Pre - 2022</a></li>
+<ul class="linklist">
+<li><a href="#2023" >• 2023</a></li>
+<li><a href="#2022" >• 2022</a></li>
+<li><a href="#pre---2022" >• Pre - 2022</a></li>
 </ul>
 </details></div>
 
