make the sidebar adaptive

--- a/about/bookmarks/index.html
+++ b/about/bookmarks/index.html
@@ -156,7 +156,7 @@
 </ul>
 
 
-<nav><a class="prev navbut" href="/about/">← Back to  About </a>
+<nav class="navbut"><a class="prev" href="/about/">← Back to  About </a>
 
 </nav>
 </div>
