--- a/about/colophon/index.html
+++ b/about/colophon/index.html
@@ -39,7 +39,7 @@
 <li><a href="site_stats" >• Performance and Compliance Stats</a></li>
 </ul></div>
 
-<nav><a class="prev navbut" href="/about/">← Back to  About </a>
+<nav class="navbut"><a class="prev" href="/about/">← Back to  About </a>
 
 </nav>
 </div>
