--- a/about/colophon/site_stats/index.html
+++ b/about/colophon/site_stats/index.html
@@ -17,7 +17,7 @@
 
 <div class="title"><h1 id="top">Performance and Compliance Stats</h1><hr></div>
 
-<nav><a class="prev navbut" href="/about/colophon/">← Back to  Colophon </a>
+<nav class="navbut"><a class="prev" href="/about/colophon/">← Back to  Colophon </a>
 
 </nav>
 </div>
