--- a/about/connections/index.html
+++ b/about/connections/index.html
@@ -48,7 +48,7 @@
 <li><a href="https://pketh.org/"  target="_blank" rel="noreferrer" >⬩&nbsp; Pketh</a></li>
 </ul></div>
 
-<nav><a class="prev navbut" href="/about/">← Back to  About </a>
+<nav class="navbut"><a class="prev" href="/about/">← Back to  About </a>
 
 </nav>
 </div>
