--- a/about/index.html
+++ b/about/index.html
@@ -32,7 +32,7 @@
 <li><a href="./setup" >• Setup - What stuff I use</a></li>
 </ul></div>
 
-<nav><a class="prev navbut" href="/">← Back to  Home </a>
+<nav class="navbut"><a class="prev" href="/">← Back to  Home </a>
 
 </nav>
 </div>
