--- a/about/journal/2023-02-28/index.html
+++ b/about/journal/2023-02-28/index.html
@@ -21,7 +21,7 @@
 <p>This month I also started learning a few different programming languages including Uxntal, Python and bits of GTK for making a desktop app. I started learning Uxntal after getting an idea for a virtual pet synthesizer in a dream, so far compudanzas&rsquo; <a href="https://compudanzas.net/introduction_to_uxn_programming_book.html" target="_blank" rel="noopener">uxn book</a> has been extremely useful and makes uxn appear quite inviting, even as a relative beginner with programming. On the other hand GTK has been a nightmare to figure out, but I seem to make progress in big leaps at once. It&rsquo;s been quite enjoyable working on apps and software that I want or need.</p>
 <p>Hopefully by the end of March I should have an update with a bunch of finished projects!</p>
 
-<nav><a class="prev navbut" href="/about/journal/">← Back to  Dook&#39;s Journal </a>
+<nav class="navbut"><a class="prev" href="/about/journal/">← Back to  Dook&#39;s Journal </a>
 
 </nav>
 </div>
