--- a/about/journal/2023-04-30/index.html
+++ b/about/journal/2023-04-30/index.html
@@ -23,7 +23,7 @@
 <p>Lastly, some small changes and updates to the site this month. The colourscheme was changed slightly to be less yellow, and improve reading contrast. I also updated the Bee Encyclopedia with the newly captured <a href="/knowledge/bees/#early-mining-bee">Early Mining Bee</a>, we&rsquo;re in peak bee season right now so I&rsquo;m hoping to capture some more species that I haven&rsquo;t managed to yet!</p>
 <p>Things have been slowing down (thankfully) but hopefully sometime next month I&rsquo;ll begin my migration over to a better SSG, I also have a few websites to design and build for friends over the summer that I&rsquo;m very much looking forward to! Till next month - Dook.</p>
 
-<nav><a class="prev navbut" href="/about/journal/">← Back to  Dook&#39;s Journal </a>
+<nav class="navbut"><a class="prev" href="/about/journal/">← Back to  Dook&#39;s Journal </a>
 
 </nav>
 </div>
