--- a/about/journal/2023-09-30/index.html
+++ b/about/journal/2023-09-30/index.html
@@ -22,7 +22,7 @@
 <p>There&rsquo;s been a bunch more stuff completed this summer, but things will also be slowing down a lot now sadly. I recently started back up in college after a two year break, I&rsquo;m now doing a bachelor of arts in Interaction Design, something that is far more catered towards my interests and focuses with design as a tool. It&rsquo;s pretty full on, so my free time is practically non-existent now which is disappointing. But I aim to slowly get to work on stuff when I can!</p>
 <p>Until next time, whenever that may be - Dook</p>
 
-<nav><a class="prev navbut" href="/about/journal/">← Back to  Dook&#39;s Journal </a>
+<nav class="navbut"><a class="prev" href="/about/journal/">← Back to  Dook&#39;s Journal </a>
 
 </nav>
 </div>
