--- a/design/famicase/index.html
+++ b/design/famicase/index.html
@@ -30,7 +30,7 @@
 <li><a href="https://super-meteor.com/?pid=159388800"  target="_blank" rel="noreferrer" >⬩&nbsp; Purchase the Famicase 2021 Zine</a></li>
 </ul></div>
 
-<nav><a class="prev navbut" href="/design/">← Back to  Design Portfolio </a>
+<nav class="navbut"><a class="prev" href="/design/">← Back to  Design Portfolio </a>
 
 </nav>
 </div>
