--- a/design/games/gamejams/index.html
+++ b/design/games/gamejams/index.html
@@ -52,7 +52,7 @@
 </ul>
 
 
-<nav><a class="prev navbut" href="/design/">← Back to  Design Portfolio </a>
+<nav class="navbut"><a class="prev" href="/design/">← Back to  Design Portfolio </a>
 
 </nav>
 </div>
