--- a/design/index.html
+++ b/design/index.html
@@ -134,7 +134,7 @@
 
 <div class="clickdiv"><h3 id="streetwalker">Streetwalker</h3><p>My entry to the annual Famicase exhibition hosted by Super Meteor.</div></a>
 
-<nav><a class="prev navbut" href="/">← Back to  Home </a>
+<nav class="navbut"><a class="prev" href="/">← Back to  Home </a>
 
 </nav>
 </div>
