--- a/design/rebble_weather/index.html
+++ b/design/rebble_weather/index.html
@@ -46,7 +46,7 @@
 <li><a href="https://old.heydays.no/project/pebble/"  target="_blank" rel="noreferrer" >⬩&nbsp; Heydays Pebble Icons Page</a></li>
 </ul></div>
 
-<nav><a class="prev navbut" href="/design/">← Back to  Design Portfolio </a>
+<nav class="navbut"><a class="prev" href="/design/">← Back to  Design Portfolio </a>
 
 </nav>
 </div>
