--- a/design/streetwalker/index.html
+++ b/design/streetwalker/index.html
@@ -28,7 +28,7 @@
 <li><a href="https://www.lexaloffle.com/bbs/cposts/yu/yuwekogiwu-0.p8.png"  target="_blank" rel="noreferrer" >⬩&nbsp; Download the cart</a></li>
 </ul></div>
 
-<nav><a class="prev navbut" href="/design/">← Back to  Design Portfolio </a>
+<nav class="navbut"><a class="prev" href="/design/">← Back to  Design Portfolio </a>
 
 </nav>
 </div>
