--- a/design/themify/index.html
+++ b/design/themify/index.html
@@ -51,7 +51,7 @@
 <iframe src="https://itch.io/embed/1968733?linkback=true" width="552" height="167" frameborder="0" style="margin-bottom:16px"><a href="https://d00k.itch.io/themifywallpaperpack">Themify - Wallpaper Pack by Dook</a></iframe>
 
 
-<nav><a class="prev navbut" href="/design/">← Back to  Design Portfolio </a>
+<nav class="navbut"><a class="prev" href="/design/">← Back to  Design Portfolio </a>
 
 </nav>
 </div>
