--- a/design/tindra_grove/index.html
+++ b/design/tindra_grove/index.html
@@ -23,7 +23,7 @@
 <img  src="/img/design/Tindra_VIG.png" loading="lazy" alt="Visual Identity Guide for the client">
 
 
-<nav><a class="prev navbut" href="/design/">← Back to  Design Portfolio </a>
+<nav class="navbut"><a class="prev" href="/design/">← Back to  Design Portfolio </a>
 
 </nav>
 </div>
