--- a/photos/digicam/sunsets/index.html
+++ b/photos/digicam/sunsets/index.html
@@ -29,7 +29,7 @@
 <img  src="/img/photos/digicam/digicam05.jpg" loading="lazy" alt="Sun hitting the corner of two walls.">
 
 
-<nav><a class="prev navbut" href="/photos/#digicam-photography">← Back to  Photo Gallery </a>
+<nav class="navbut"><a class="prev" href="/photos/#digicam-photography">← Back to  Photo Gallery </a>
 
 </nav>
 </div>
