--- a/photos/experiments/light/index.html
+++ b/photos/experiments/light/index.html
@@ -31,7 +31,7 @@
 <img  src="/img/photos/light/light05.jpg" loading="lazy" alt="Various shapes of light drawn above cinema seats.">
 
 
-<nav><a class="prev navbut" href="/photos/#experiments">← Back to  Photo Gallery </a>
+<nav class="navbut"><a class="prev" href="/photos/#experiments">← Back to  Photo Gallery </a>
 
 </nav>
 </div>
