--- a/photos/experiments/selfportraiture/index.html
+++ b/photos/experiments/selfportraiture/index.html
@@ -37,7 +37,7 @@
 <img  src="/img/photos/selfportraiture/selfportraiture07.jpg" loading="lazy" alt="A hard-boiled portrait of a person with diffracted images.">
 
 
-<nav><a class="prev navbut" href="/photos/#experiments">← Back to  Photo Gallery </a>
+<nav class="navbut"><a class="prev" href="/photos/#experiments">← Back to  Photo Gallery </a>
 
 </nav>
 </div>
