--- a/photos/index.html
+++ b/photos/index.html
@@ -226,8 +226,8 @@
 
 <div class="clickdiv"><h3 id="self-portraiture">Self Portraiture</h3><p>An experiment messing around with light and exposure for a piece of work based on &lsquo;The Portrait of Dorian Gray&rsquo;</div></a>
 
-<nav><a class="prev navbut" href="/">← Back to  Home </a>
-<a class="top navbut" href="#">↑</a>
+<nav class="navbut"><a class="prev" href="/">← Back to  Home </a>
+<a class="top" href="#">↑</a>
 </nav>
 </div>
 <div class="footer">
