--- a/photos/places/loughderg/index.html
+++ b/photos/places/loughderg/index.html
@@ -35,7 +35,7 @@
 <img  src="/img/photos/places/loughderg06.jpg" loading="lazy" alt="Lough Derg">
 
 
-<nav><a class="prev navbut" href="/photos/#places">← Back to  Photo Gallery </a>
+<nav class="navbut"><a class="prev" href="/photos/#places">← Back to  Photo Gallery </a>
 
 </nav>
 </div>
