--- a/photos/places/westport/index.html
+++ b/photos/places/westport/index.html
@@ -44,7 +44,7 @@
 <img  src="/img/photos/places/westport09.jpg" loading="lazy" alt="A striking, red bridge over a stream">
 
 
-<nav><a class="prev navbut" href="/photos/#places">← Back to  Photo Gallery </a>
+<nav class="navbut"><a class="prev" href="/photos/#places">← Back to  Photo Gallery </a>
 
 </nav>
 </div>
