--- a/photos/trichrome/lockdown/index.html
+++ b/photos/trichrome/lockdown/index.html
@@ -29,7 +29,7 @@
 <img  src="/img/photos/trichrome/lockdown/lockdown04.jpg" loading="lazy" alt="An abandoned trolley in a carpark">
 
 
-<nav><a class="prev navbut" href="/photos/#trichrome-photography">← Back to  Photo Gallery </a>
+<nav class="navbut"><a class="prev" href="/photos/#trichrome-photography">← Back to  Photo Gallery </a>
 
 </nav>
 </div>
