--- a/photos/trichrome/spring/index.html
+++ b/photos/trichrome/spring/index.html
@@ -35,9 +35,9 @@
 <img  src="/img/photos/trichrome/spring/spring06.jpg" loading="lazy" alt="another up close shot of the white flowers.">
 
 
-<nav><a class="prev navbut" href="/photos/#trichrome-photography">← Back to  Photo Gallery </a>
+<nav class="navbut"><a class="prev" href="/photos/#trichrome-photography">← Back to  Photo Gallery </a>
 
-<a class="next navbut" href="../summer">Next Page →</a></nav>
+<a class="next" href="../summer">Next Page →</a></nav>
 </div>
 <div class="footer">
 <div class="layout">
