--- a/photos/trichrome/summer/index.html
+++ b/photos/trichrome/summer/index.html
@@ -35,9 +35,9 @@
 <img  src="/img/photos/trichrome/summer/summer07.jpg" loading="lazy" alt="A burnt, discarded trunk of a tree.">
 
 
-<nav><a class="prev navbut" href="/photos/#trichrome-photography">← Back to  Photo Gallery </a>
+<nav class="navbut"><a class="prev" href="/photos/#trichrome-photography">← Back to  Photo Gallery </a>
 
-<a class="next navbut" href="../autumn">Next Page →</a></nav>
+<a class="next" href="../autumn">Next Page →</a></nav>
 </div>
 <div class="footer">
 <div class="layout">
