--- a/photos/trichrome/vivid_flowers/index.html
+++ b/photos/trichrome/vivid_flowers/index.html
@@ -29,7 +29,7 @@
 <img  src="/img/photos/trichrome/vivid/vivid04.jpg" loading="lazy" alt="A bright, white flower contrasted on a black backdrop.">
 
 
-<nav><a class="prev navbut" href="/photos/#trichrome-photography">← Back to  Photo Gallery </a>
+<nav class="navbut"><a class="prev" href="/photos/#trichrome-photography">← Back to  Photo Gallery </a>
 
 </nav>
 </div>
