--- a/photos/trichrome/winter/index.html
+++ b/photos/trichrome/winter/index.html
@@ -32,7 +32,7 @@
 <img  src="/img/photos/trichrome/winter/winter06.jpg" loading="lazy" alt="Frosty grass.">
 
 
-<nav><a class="prev navbut" href="/photos/#trichrome-photography">← Back to  Photo Gallery </a>
+<nav class="navbut"><a class="prev" href="/photos/#trichrome-photography">← Back to  Photo Gallery </a>
 
 </nav>
 </div>
