--- a/wiki/beachfossils/index.html
+++ b/wiki/beachfossils/index.html
@@ -28,7 +28,7 @@
 <li><a href="https://en.wikipedia.org/wiki/Rugosa"  target="_blank" rel="noreferrer" >⬩&nbsp; Wikipedia: Rugosa, a common coral fossil type</a></li>
 </ul></div>
 
-<nav><a class="prev navbut" href="/wiki/#nature-wiki">← Back to  Wiki </a>
+<nav class="navbut"><a class="prev" href="/wiki/#nature-wiki">← Back to  Wiki </a>
 
 </nav>
 </div>
