--- a/wiki/index.html
+++ b/wiki/index.html
@@ -12,7 +12,8 @@
 <li><a href="/about/">About</a></li>
 </ul></div></nav></div>
 
-<aside class="toc">
+<aside>
+<div class="toc">
 <h2>Wiki Index</h2>
 <hr>
 <nav>
@@ -36,6 +37,7 @@
     </ul>
   </ul>
 </nav>
+</div>
 </aside>
 
 <div class="main layout">
@@ -397,8 +399,8 @@
 </ul></div>
 <hr>
 
-<nav><a class="prev navbut" href="/">← Back to  Home </a>
-<a class="top navbut" href="#">↑</a>
+<nav class="navbut"><a class="prev" href="/">← Back to  Home </a>
+<a class="top" href="#">↑</a>
 </nav>
 </div>
 <div class="footer">
