--- a/wiki/linux/imagemagick/index.html
+++ b/wiki/linux/imagemagick/index.html
@@ -85,7 +85,7 @@ or
 <li><a href="https://imagemagick.org/"  target="_blank" rel="noreferrer" >⬩&nbsp; Imagemagick</a></li>
 </ul></div>
 
-<nav><a class="prev navbut" href="/wiki/#linux-wiki">← Back to  Wiki </a>
+<nav class="navbut"><a class="prev" href="/wiki/#linux-wiki">← Back to  Wiki </a>
 
 </nav>
 </div>
