--- a/wiki/linux/pdf/index.html
+++ b/wiki/linux/pdf/index.html
@@ -58,7 +58,7 @@ output output.pdf</code></pre><hr>
 <li><a href="https://github.com/myollie/img2pdf"  target="_blank" rel="noreferrer" >⬩&nbsp; Img2Pdf Github</a></li>
 </ul></div>
 
-<nav><a class="prev navbut" href="/wiki/#linux-wiki">← Back to  Wiki </a>
+<nav class="navbut"><a class="prev" href="/wiki/#linux-wiki">← Back to  Wiki </a>
 
 </nav>
 </div>
