--- a/wiki/origami-designs/index.html
+++ b/wiki/origami-designs/index.html
@@ -28,7 +28,7 @@
 <p>This is my take on the origami cat design, there isn&rsquo;t too much to say about it, the design itself isn&rsquo;t all too complicated. Some parts like forming the face take a couple of light, unmarked folds on the sides. It&rsquo;s so cute.</p>
 <hr>
 
-<nav><a class="prev navbut" href="/wiki/#crafts-wiki">← Back to  Wiki </a>
+<nav class="navbut"><a class="prev" href="/wiki/#crafts-wiki">← Back to  Wiki </a>
 
 </nav>
 </div>
