--- a/wiki/reusingtech/index.html
+++ b/wiki/reusingtech/index.html
@@ -39,7 +39,7 @@
 
 <h2 id="modification-and-new-software">Modification and new Software</h2><p>Modifying devices has become more and more popular over the years, today it&rsquo;s possible to completely rebuild a Gameboy from the ground up with a modern display, better audio and a fancy shell to boot! Products like <a href="https://www.iflash.xyz/" target="_blank" rel="noopener">iFlash</a> give new life to iPods, with faster, more reliable flash storage over old mini hard-drives. Replacement firmware <a href="https://www.rockbox.org/" target="_blank" rel="noopener">Rockbox</a> is also extremely popular upgrade for various media players. There&rsquo;s also fantastic projects like Hundred Rabbit&rsquo;s <a href="https://100r.co/site/uxn.html" target="_blank" rel="noopener">Uxn</a> ecosystem of smol tools and games. Uxn runs on many systems, even being ported to the Nintendo GBA and DS. The system has many fun tools like <a href="https://100r.co/site/noodle.html" target="_blank" rel="noopener">noodle</a> a useful drawing app, a cute <a href="https://wiki.xxiivv.com/site/catclock.html" target="_blank" rel="noopener">catclock</a> and <a href="https://100r.co/site/orca.html" target="_blank" rel="noopener">orca</a> a livecoding environment used for making music. Uxn aims to give practical use to older, low-powered devices as well as newer ones that may otherwise be thrown away.</p>
 
-<nav><a class="prev navbut" href="/wiki/">← Back to  Wiki </a>
+<nav class="navbut"><a class="prev" href="/wiki/">← Back to  Wiki </a>
 
 </nav>
 </div>
