--- a/wiki/rockbox_advanced/font_combining/index.html
+++ b/wiki/rockbox_advanced/font_combining/index.html
@@ -59,7 +59,7 @@
 <li>⚬ Export the font by going to <strong>File &gt;  Make Font</strong> choose true type and validate.</li>
 </ul></div>
 
-<nav><a class="prev navbut" href="/wiki/">← Back to  Wiki </a>
+<nav class="navbut"><a class="prev" href="/wiki/">← Back to  Wiki </a>
 
 </nav>
 </div>
