--- a/wiki/rockbox_advanced/themed_lists_notes/index.html
+++ b/wiki/rockbox_advanced/themed_lists_notes/index.html
@@ -47,7 +47,7 @@
 #
 %Vl(flush,0,0,-,-,-)</code></pre><p>One thing to note if you are using a themed scrollbar: you will want to place the code setting up the scrollbar after all this, and the code rendering the scrollbar before. This prevents strange clipping after deactivating the lockscreen.</p>
 
-<nav><a class="prev navbut" href="/wiki/#rockbox-theming">← Back to  Wiki </a>
+<nav class="navbut"><a class="prev" href="/wiki/#rockbox-theming">← Back to  Wiki </a>
 
 </nav>
 </div>
