--- a/wiki/rockbox_theming/index.html
+++ b/wiki/rockbox_theming/index.html
@@ -29,7 +29,7 @@
 
 <div class="clickdiv"><h3 id="2-the-viewport">2. The Viewport</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore disputandum putant.</div></a>
 
-<nav><a class="prev navbut" href="/wiki/">← Back to  Wiki </a>
+<nav class="navbut"><a class="prev" href="/wiki/">← Back to  Wiki </a>
 
 </nav>
 </div>
