--- a/wiki/seedharvesting/index.html
+++ b/wiki/seedharvesting/index.html
@@ -39,7 +39,7 @@
 <li><a href="https://www.thespruce.com/growing-english-bluebells-5094292"  target="_blank" rel="noreferrer" >⬩&nbsp; Growing and caring for Bluebells</a></li>
 </ul></div>
 
-<nav><a class="prev navbut" href="/wiki/#nature-wiki">← Back to  Wiki </a>
+<nav class="navbut"><a class="prev" href="/wiki/#nature-wiki">← Back to  Wiki </a>
 
 </nav>
 </div>
