--- a/about/colophon/identity/index.html
+++ b/about/colophon/identity/index.html
@@ -38,7 +38,7 @@
 
 <p>The self portrait used for profile pictures on websites. Came from an art project where I combined the same 2 images 100 times with different blending layers to create different results. Also seen on the about page.</p>
 
-<nav><a class="prev navbut" href="/about/colophon/">← Back to  Colophon </a>
+<nav class="navbut"><a class="prev" href="/about/colophon/">← Back to  Colophon </a>
 
 </nav>
 </div>
