--- a/about/journal/2023-03-31/index.html
+++ b/about/journal/2023-03-31/index.html
@@ -22,7 +22,7 @@
 <p>Lastly, my website turned a year old in March! I put together a <a href="https://d00k.net/journal/one-year-of-dook-net/" target="_blank" rel="noopener">blog post</a> where I discussed how the site came to be, as well as the changes it went through during the year. I also took the last paragraph to think about where I want to website to go next, something I hope to work on really soon!</p>
 <p>That&rsquo;s all for now, I have another 2 weeks to cram some projects in before I need to finish my final portfolio for college entry. Once that&rsquo;s done I plan on taking a break for the rest of the month to refresh and get ready for the rest of the year. Till then! - Dook.</p>
 
-<nav><a class="prev navbut" href="/about/journal/">← Back to  Dook&#39;s Journal </a>
+<nav class="navbut"><a class="prev" href="/about/journal/">← Back to  Dook&#39;s Journal </a>
 
 </nav>
 </div>
