--- a/about/journal/index.html
+++ b/about/journal/index.html
@@ -70,7 +70,7 @@
 
 </article>
 <hr>
-<nav><a class="prev navbut" href="/about/">← Back to  About </a>
+<nav class="navbut"><a class="prev" href="/about/">← Back to  About </a>
 
 </nav>
 </div></body>
