--- a/about/setup/index.html
+++ b/about/setup/index.html
@@ -80,7 +80,7 @@
 </div>
 </div>
 
-<nav><a class="prev navbut" href="/about/">← Back to  About </a>
+<nav class="navbut"><a class="prev" href="/about/">← Back to  About </a>
 
 </nav>
 </div>
