--- a/design/beryl_logo/index.html
+++ b/design/beryl_logo/index.html
@@ -28,7 +28,7 @@
 <li><a href="https://thesam.zone/"  target="_blank" rel="noreferrer" >⬩&nbsp; Sam&#39;s Blog</a></li>
 </ul></div>
 
-<nav><a class="prev navbut" href="/design/">← Back to  Design Portfolio </a>
+<nav class="navbut"><a class="prev" href="/design/">← Back to  Design Portfolio </a>
 
 </nav>
 </div>
