--- a/design/compacticons/index.html
+++ b/design/compacticons/index.html
@@ -24,7 +24,7 @@
 <li><a href="https://github.com/D0-0K/compacticons/archive/refs/tags/release.zip"  target="_blank" rel="noreferrer" >⬩&nbsp; download the set</a></li>
 </ul></div>
 
-<nav><a class="prev navbut" href="/design/">← Back to  Design Portfolio </a>
+<nav class="navbut"><a class="prev" href="/design/">← Back to  Design Portfolio </a>
 
 </nav>
 </div>
