--- a/design/timetwistpop/index.html
+++ b/design/timetwistpop/index.html
@@ -34,7 +34,7 @@
 <li><a href="https://github.com/D0-0K/time-twist-pop"  target="_blank" rel="noreferrer" >⬩&nbsp; Github Repository</a></li>
 </ul></div>
 
-<nav><a class="prev navbut" href="/design/">← Back to  Design Portfolio </a>
+<nav class="navbut"><a class="prev" href="/design/">← Back to  Design Portfolio </a>
 
 </nav>
 </div>
