--- a/photos/experiments/lowres/index.html
+++ b/photos/experiments/lowres/index.html
@@ -31,7 +31,7 @@
 <img  src="/img/photos/lowres/lowres05.jpg" loading="lazy" alt="A mossy branch.">
 
 
-<nav><a class="prev navbut" href="/photos/#experiments">← Back to  Photo Gallery </a>
+<nav class="navbut"><a class="prev" href="/photos/#experiments">← Back to  Photo Gallery </a>
 
 </nav>
 </div>
