--- a/photos/trichrome/autumn/index.html
+++ b/photos/trichrome/autumn/index.html
@@ -38,9 +38,9 @@
 <img  src="/img/photos/trichrome/autumn/autumn08.jpg" loading="lazy" alt="A mossy blob in soil surrounded by twigs.">
 
 
-<nav><a class="prev navbut" href="/photos/#trichrome-photography">← Back to  Photo Gallery </a>
+<nav class="navbut"><a class="prev" href="/photos/#trichrome-photography">← Back to  Photo Gallery </a>
 
-<a class="next navbut" href="../winter">Next Page →</a></nav>
+<a class="next" href="../winter">Next Page →</a></nav>
 </div>
 <div class="footer">
 <div class="layout">
