--- a/wiki/bees/index.html
+++ b/wiki/bees/index.html
@@ -138,8 +138,8 @@
 <li><a href="https://biodiversityireland.ie/identifying-irish-bumblebees/lesson.html"  target="_blank" rel="noreferrer" >⬩&nbsp; Bumble Bee Identification Guide</a></li>
 </ul></div>
 
-<nav><a class="prev navbut" href="/wiki/#nature-wiki">← Back to  Wiki </a>
-<a class="top navbut" href="#">↑</a>
+<nav class="navbut"><a class="prev" href="/wiki/#nature-wiki">← Back to  Wiki </a>
+<a class="top" href="#">↑</a>
 </nav>
 </div>
 <div class="footer">
