--- a/wiki/ecovillage/index.html
+++ b/wiki/ecovillage/index.html
@@ -54,7 +54,7 @@ a large <a href="https://cloughjordancommunityfarm.ie/" target="_blank" rel="noo
 <figcaption>a wattle and daub round house</figcaption></figure>
 
 
-<nav><a class="prev navbut" href="/wiki/#nature-wiki">← Back to  Wiki </a>
+<nav class="navbut"><a class="prev" href="/wiki/#nature-wiki">← Back to  Wiki </a>
 
 </nav>
 </div>
