--- a/wiki/linux/sftp/index.html
+++ b/wiki/linux/sftp/index.html
@@ -41,7 +41,7 @@
 
 </ul></div>
 
-<nav><a class="prev navbut" href="/wiki/#linux-wiki">← Back to  Wiki </a>
+<nav class="navbut"><a class="prev" href="/wiki/#linux-wiki">← Back to  Wiki </a>
 
 </nav>
 </div>
