--- a/wiki/rockbox_advanced/missing_features/index.html
+++ b/wiki/rockbox_advanced/missing_features/index.html
@@ -50,7 +50,7 @@
 <p>Visually, this will help create more beautiful and informative Database menus. Something which I think would help user satisfaction, as the menu experience is complained about a lot in iPod communities.</p>
 <p>This feature would depend on having Page directory tags to be useful</p>
 
-<nav><a class="prev navbut" href="/wiki/">← Back to  Wiki </a>
+<nav class="navbut"><a class="prev" href="/wiki/">← Back to  Wiki </a>
 
 </nav>
 </div>
