homepage minor update

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <img src="/img/assets/homeimage.png" alt="shadows on a dimly lit wall" width="720px" height="540px" style="border-radius:20px;margin-top:24px"> 
 <div class="text borderless box">
 
-<div><h2 id="dooknet-ˈdʊk">dook.net (/ˈdʊk/)</h2><p>Personal Website, Portfolio, Wiki, Photo Gallery, Memex and Blog</div>
+<div><h2 id="dooknet-ˈdʊk">dook.net (/ˈdʊk/)</h2><p>A Personal Website, Blog, Photo Gallery and Information tool.</div>
 </div>
 
-<div class="listbox box"><h2>Latest from the Blog</h2><p>Check out some of the latest posts from the blog.</p><hr><ul>
-<li><a class="linklist" href="/blog/redesigning_again/">∙ Re-designing my site, one more time</a></li><li><a class="linklist" href="/blog/one-year-of-dook-net/">∙ Celebrating a Year of d00k.net</a></li><li><a class="linklist" href="/blog/inside_themify/">∙ A Look Inside Themify</a></li> 
+<div class="listbox box"><h2>Latest from the Blog</h2><p>Check out some of the latest posts from the blog.</p><hr><ul class="linklist">
+<li><a href="/blog/redesigning_again/">∙ Re-designing my site, one more time</a></li><li><a href="/blog/one-year-of-dook-net/">∙ Celebrating a Year of d00k.net</a></li><li><a href="/blog/inside_themify/">∙ A Look Inside Themify</a></li> 
 </ul></div>
 </div>
 <div class="footer">
