--- a/wiki/rockbox_advanced/font_combining/index.html
+++ b/wiki/rockbox_advanced/font_combining/index.html
@@ -7,7 +7,7 @@
 <body><div class="header"><nav><div style="width:45vw;height:auto;max-width:180px"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true" width="184px" height="172px"></a></div><div class="menu"><ul role="list">
 <li><a href="/photos/">Photos</a></li>
 <li style="margin-left:auto"><a href="/wiki/">Wiki</a></li></ul>  
-<ul role="list" style="border-left:1px solid #808080">
+<ul role="list" style="border-left:1px solid #aaa">
 <li><a href="/design/">Design</a></li>
 <li><a href="/blog/">Blog</a></li>   
 <li><a href="/about/">About</a></li>
@@ -70,7 +70,7 @@
 <a class="icon" href="/index.xml" target="_blank"><img src="/img/assets/rss.svg" loading="lazy" alt="RSS Feed" width="28"height="28"></a>
 <a class="icon" href="https://github.com/D0-0K" target="_blank" alt="git"><img src="/img/assets/git.svg" loading="lazy" alt="Git" width="22"height="28"></a>
 <hr>
-<div style="margin:20px 0 8px">Published: <strong>June 2022</strong></div><div>d00k.net © 2023 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a></div>
+<div style="margin:20px 0 8px">Published: <strong>June 2022</strong></div><div>d00k.net © 2024 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a></div>
 </div>
 <img aria-hidden="true" style="max-width:none;width:521px;height:64px" src="/img/assets/footer.svg" height="64" width="521">
 </div>
