--- a/about/journal/2023-04-30/index.html
+++ b/about/journal/2023-04-30/index.html
@@ -2,7 +2,7 @@
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1"><link href="/css/style.css" rel="stylesheet"><link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
 
 <meta property="og:description" 
-  content="Updates from around the site and what I&#39;ve worked on this month"/>
+  content="Updates from around the site and what I&#39;ve worked on this month"/><link rel="me" href="https://post.lurk.org/@dook">
 <title> April Update  • d00k.net</title></head>
 <body><div class="header"><nav><div style="width:45vw;height:auto;max-width:180px"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true" width="184px" height="172px"></a></div><div class="menu"><ul role="list">
 <li><a href="/photos/">Photos</a></li>
