--- a/design/timetwistpop/index.html
+++ b/design/timetwistpop/index.html
@@ -2,7 +2,7 @@
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1"><link href="/css/style.css" rel="stylesheet"><link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
 <meta property="og:image" content="/img/design/timetwistpop02.jpg" />
 <meta property="og:description" 
-  content="A simple, vibrant watchface for the colour models of the Pebble watch family."/>
+  content="A simple, vibrant watchface for the colour models of the Pebble watch family."/><link rel="me" href="https://post.lurk.org/@dook">
 <title> Time Twist Pop  • d00k.net</title></head>
 <body><div class="header"><nav><div style="width:45vw;height:auto;max-width:180px"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true" width="184px" height="172px"></a></div><div class="menu"><ul role="list">
 <li><a href="/photos/">Photos</a></li>
