--- a/photos/digicam/sunsets/index.html
+++ b/photos/digicam/sunsets/index.html
@@ -2,7 +2,7 @@
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1"><link href="/css/style.css" rel="stylesheet"><link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
 <meta property="og:image" content="/img/photos/digicam/digicam01.jpg" />
 <meta property="og:description" 
-  content="Photos taken using my Sony DSC-S85 &#39;Digicam&#39;."/>
+  content="Photos taken using my Sony DSC-S85 &#39;Digicam&#39;."/><link rel="me" href="https://post.lurk.org/@dook">
 <title> Digicam  • d00k.net</title></head>
 <body><div class="header"><nav><div style="width:45vw;height:auto;max-width:180px"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true" width="184px" height="172px"></a></div><div class="menu"><ul role="list">
 <li><a href="/photos/">Photos</a></li>
