--- a/wiki/linux/sftp/index.html
+++ b/wiki/linux/sftp/index.html
@@ -2,7 +2,7 @@
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1"><link href="/css/style.css" rel="stylesheet"><link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
 <meta property="og:image" content="/img/wiki/linux/sftp.svg" />
 <meta property="og:description" 
-  content="How to use SFTP to transfer files &amp; SSH to connect to devices."/>
+  content="How to use SFTP to transfer files &amp; SSH to connect to devices."/><link rel="me" href="https://post.lurk.org/@dook">
 <title> SFTP &amp; SSH  • d00k.net</title></head>
 <body><div class="header"><nav><div style="width:45vw;height:auto;max-width:180px"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true" width="184px" height="172px"></a></div><div class="menu"><ul role="list">
 <li><a href="/photos/">Photos</a></li>
